Batcher CDE (#422)
* Batcher CDE

* Added Batcher Support for Fees

* Only allow one Batcher

* Merged Batcher Contract into PaimaL2Contract

* Keeping Batcher temporal fees in memory. Removed ENV BATCHER_PAYMENT_ENABLED.

* Update Batcher Balance

* added notice to batcher payments writes

* Removed wei reference
